# acer-lib

./: .gitignore  CMakeLists.txt  README.md
include/: acerlib_pathmanip.h
include/acerlib/: acerlib.h
include/acerlib/SFML/: acerlib_sfml.h  acerlib_sfml.tcc
src/: acerlib.h  acerlib_pathmanip.cpp  acerlib_pathmanip.h  acerlib_pathmanip.tpp  acerlib_strmanip.cpp  acerlib_strmanip.h  acerlib_strmanip.tpp
src/SFML/: acerlib_sfml.cpp  acerlib_sfml.h  acerlib_sfml.tpp
tests/path/: CMakeLists.txt
tests/path/src/: path_test.cpp
tests/path_manip/: CMakeLists.txt
tests/path_manip/dep/acerlib/include/: acerlib_pathmanip.h
tests/path_manip/src/: main.cpp
tests/strmanip/: CMakeLists.txt
tests/strmanip/src/: strmanip_test.cpp
